--- a/client/src/app.html
+++ b/client/src/app.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="ar">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-	</style>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="stylesheet" href="app.css" />
+	<meta name="viewport" content="width=device-width" />
+	%sveltekit.head%
+</head>
+<style>
+	* {
+		margin: 0;
+		padding: 0;
+	}
+</style>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
